; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_mpegvideo_msa.c_mpeg2_dct_unquantize_inter_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_mpegvideo_msa.c_mpeg2_dct_unquantize_inter_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*)* @mpeg2_dct_unquantize_inter_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpeg2_dct_unquantize_inter_msa(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store i32 -1, i32* %8, align 4
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @__msa_fill_h(i32 %32)
  store i32 %33, i32* %11, align 4
  store i32 0, i32* %7, align 4
  br label %34

34:                                               ; preds = %346, %3
  %35 = load i32, i32* %7, align 4
  %36 = icmp slt i32 %35, 2
  br i1 %36, label %37, label %349

37:                                               ; preds = %34
  %38 = load i32*, i32** %4, align 8
  %39 = load i32, i32* %13, align 4
  %40 = load i32, i32* %14, align 4
  %41 = load i32, i32* %15, align 4
  %42 = load i32, i32* %16, align 4
  %43 = call i32 @LD_SH4(i32* %38, i32 8, i32 %39, i32 %40, i32 %41, i32 %42)
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %17, align 4
  %46 = load i32, i32* %18, align 4
  %47 = load i32, i32* %19, align 4
  %48 = load i32, i32* %20, align 4
  %49 = call i32 @LD_SH4(i32* %44, i32 8, i32 %45, i32 %46, i32 %47, i32 %48)
  %50 = load i32, i32* %13, align 4
  %51 = call i32 @__msa_clti_s_h(i32 %50, i32 0)
  store i32 %51, i32* %12, align 4
  %52 = load i32, i32* %13, align 4
  %53 = call i32 @__msa_ceqi_h(i32 %52, i32 0)
  store i32 %53, i32* %23, align 4
  %54 = load i32, i32* %13, align 4
  %55 = sub nsw i32 0, %54
  store i32 %55, i32* %10, align 4
  %56 = load i32, i32* %13, align 4
  %57 = load i32, i32* %10, align 4
  %58 = load i32, i32* %12, align 4
  %59 = call i64 @__msa_bmnz_v(i32 %56, i32 %57, i32 %58)
  %60 = trunc i64 %59 to i32
  store i32 %60, i32* %9, align 4
  %61 = load i32, i32* %9, align 4
  %62 = shl i32 %61, 1
  store i32 %62, i32* %9, align 4
  %63 = load i32, i32* %9, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %9, align 4
  %65 = load i32, i32* %9, align 4
  %66 = load i32, i32* %30, align 4
  %67 = load i32, i32* %29, align 4
  %68 = call i32 @UNPCK_SH_SW(i32 %65, i32 %66, i32 %67)
  %69 = load i32, i32* %11, align 4
  %70 = load i32, i32* %26, align 4
  %71 = load i32, i32* %25, align 4
  %72 = call i32 @UNPCK_SH_SW(i32 %69, i32 %70, i32 %71)
  %73 = load i32, i32* %17, align 4
  %74 = load i32, i32* %27, align 4
  %75 = load i32, i32* %28, align 4
  %76 = call i32 @UNPCK_SH_SW(i32 %73, i32 %74, i32 %75)
  %77 = load i32, i32* %29, align 4
  %78 = load i32, i32* %25, align 4
  %79 = mul nsw i32 %77, %78
  store i32 %79, i32* %24, align 4
  %80 = load i32, i32* %28, align 4
  %81 = load i32, i32* %24, align 4
  %82 = mul nsw i32 %81, %80
  store i32 %82, i32* %24, align 4
  %83 = load i32, i32* %24, align 4
  %84 = ashr i32 %83, 4
  store i32 %84, i32* %29, align 4
  %85 = load i32, i32* %30, align 4
  %86 = load i32, i32* %26, align 4
  %87 = mul nsw i32 %85, %86
  store i32 %87, i32* %24, align 4
  %88 = load i32, i32* %27, align 4
  %89 = load i32, i32* %24, align 4
  %90 = mul nsw i32 %89, %88
  store i32 %90, i32* %24, align 4
  %91 = load i32, i32* %24, align 4
  %92 = ashr i32 %91, 4
  store i32 %92, i32* %30, align 4
  %93 = load i32, i32* %29, align 4
  %94 = load i32, i32* %30, align 4
  %95 = call i32 @__msa_pckev_h(i32 %93, i32 %94)
  store i32 %95, i32* %22, align 4
  %96 = load i32, i32* %22, align 4
  %97 = sub nsw i32 0, %96
  store i32 %97, i32* %10, align 4
  %98 = load i32, i32* %22, align 4
  %99 = load i32, i32* %10, align 4
  %100 = load i32, i32* %12, align 4
  %101 = call i64 @__msa_bmnz_v(i32 %98, i32 %99, i32 %100)
  %102 = trunc i64 %101 to i32
  store i32 %102, i32* %21, align 4
  %103 = load i32, i32* %21, align 4
  %104 = load i32, i32* %13, align 4
  %105 = load i32, i32* %23, align 4
  %106 = call i64 @__msa_bmnz_v(i32 %103, i32 %104, i32 %105)
  %107 = trunc i64 %106 to i32
  store i32 %107, i32* %21, align 4
  %108 = load i32, i32* %21, align 4
  %109 = load i32*, i32** %4, align 8
  %110 = call i32 @ST_SH(i32 %108, i32* %109)
  %111 = load i32*, i32** %4, align 8
  %112 = getelementptr inbounds i32, i32* %111, i64 8
  store i32* %112, i32** %4, align 8
  %113 = load i32*, i32** %6, align 8
  %114 = getelementptr inbounds i32, i32* %113, i64 8
  store i32* %114, i32** %6, align 8
  %115 = load i32, i32* %21, align 4
  %116 = load i32, i32* %21, align 4
  %117 = call i32 @__msa_hadd_s_w(i32 %115, i32 %116)
  store i32 %117, i32* %31, align 4
  %118 = load i32, i32* %31, align 4
  %119 = call i64 @HADD_SW_S32(i32 %118)
  %120 = load i32, i32* %8, align 4
  %121 = sext i32 %120 to i64
  %122 = add nsw i64 %121, %119
  %123 = trunc i64 %122 to i32
  store i32 %123, i32* %8, align 4
  %124 = load i32, i32* %14, align 4
  %125 = call i32 @__msa_clti_s_h(i32 %124, i32 0)
  store i32 %125, i32* %12, align 4
  %126 = load i32, i32* %14, align 4
  %127 = call i32 @__msa_ceqi_h(i32 %126, i32 0)
  store i32 %127, i32* %23, align 4
  %128 = load i32, i32* %14, align 4
  %129 = sub nsw i32 0, %128
  store i32 %129, i32* %10, align 4
  %130 = load i32, i32* %14, align 4
  %131 = load i32, i32* %10, align 4
  %132 = load i32, i32* %12, align 4
  %133 = call i64 @__msa_bmnz_v(i32 %130, i32 %131, i32 %132)
  %134 = trunc i64 %133 to i32
  store i32 %134, i32* %9, align 4
  %135 = load i32, i32* %9, align 4
  %136 = shl i32 %135, 1
  store i32 %136, i32* %9, align 4
  %137 = load i32, i32* %9, align 4
  %138 = add nsw i32 %137, 1
  store i32 %138, i32* %9, align 4
  %139 = load i32, i32* %9, align 4
  %140 = load i32, i32* %30, align 4
  %141 = load i32, i32* %29, align 4
  %142 = call i32 @UNPCK_SH_SW(i32 %139, i32 %140, i32 %141)
  %143 = load i32, i32* %11, align 4
  %144 = load i32, i32* %26, align 4
  %145 = load i32, i32* %25, align 4
  %146 = call i32 @UNPCK_SH_SW(i32 %143, i32 %144, i32 %145)
  %147 = load i32, i32* %18, align 4
  %148 = load i32, i32* %27, align 4
  %149 = load i32, i32* %28, align 4
  %150 = call i32 @UNPCK_SH_SW(i32 %147, i32 %148, i32 %149)
  %151 = load i32, i32* %29, align 4
  %152 = load i32, i32* %25, align 4
  %153 = mul nsw i32 %151, %152
  store i32 %153, i32* %24, align 4
  %154 = load i32, i32* %28, align 4
  %155 = load i32, i32* %24, align 4
  %156 = mul nsw i32 %155, %154
  store i32 %156, i32* %24, align 4
  %157 = load i32, i32* %24, align 4
  %158 = ashr i32 %157, 4
  store i32 %158, i32* %29, align 4
  %159 = load i32, i32* %30, align 4
  %160 = load i32, i32* %26, align 4
  %161 = mul nsw i32 %159, %160
  store i32 %161, i32* %24, align 4
  %162 = load i32, i32* %27, align 4
  %163 = load i32, i32* %24, align 4
  %164 = mul nsw i32 %163, %162
  store i32 %164, i32* %24, align 4
  %165 = load i32, i32* %24, align 4
  %166 = ashr i32 %165, 4
  store i32 %166, i32* %30, align 4
  %167 = load i32, i32* %29, align 4
  %168 = load i32, i32* %30, align 4
  %169 = call i32 @__msa_pckev_h(i32 %167, i32 %168)
  store i32 %169, i32* %22, align 4
  %170 = load i32, i32* %22, align 4
  %171 = sub nsw i32 0, %170
  store i32 %171, i32* %10, align 4
  %172 = load i32, i32* %22, align 4
  %173 = load i32, i32* %10, align 4
  %174 = load i32, i32* %12, align 4
  %175 = call i64 @__msa_bmnz_v(i32 %172, i32 %173, i32 %174)
  %176 = trunc i64 %175 to i32
  store i32 %176, i32* %21, align 4
  %177 = load i32, i32* %21, align 4
  %178 = load i32, i32* %14, align 4
  %179 = load i32, i32* %23, align 4
  %180 = call i64 @__msa_bmnz_v(i32 %177, i32 %178, i32 %179)
  %181 = trunc i64 %180 to i32
  store i32 %181, i32* %21, align 4
  %182 = load i32, i32* %21, align 4
  %183 = load i32*, i32** %4, align 8
  %184 = call i32 @ST_SH(i32 %182, i32* %183)
  %185 = load i32*, i32** %4, align 8
  %186 = getelementptr inbounds i32, i32* %185, i64 8
  store i32* %186, i32** %4, align 8
  %187 = load i32*, i32** %6, align 8
  %188 = getelementptr inbounds i32, i32* %187, i64 8
  store i32* %188, i32** %6, align 8
  %189 = load i32, i32* %21, align 4
  %190 = load i32, i32* %21, align 4
  %191 = call i32 @__msa_hadd_s_w(i32 %189, i32 %190)
  store i32 %191, i32* %31, align 4
  %192 = load i32, i32* %31, align 4
  %193 = call i64 @HADD_SW_S32(i32 %192)
  %194 = load i32, i32* %8, align 4
  %195 = sext i32 %194 to i64
  %196 = add nsw i64 %195, %193
  %197 = trunc i64 %196 to i32
  store i32 %197, i32* %8, align 4
  %198 = load i32, i32* %15, align 4
  %199 = call i32 @__msa_clti_s_h(i32 %198, i32 0)
  store i32 %199, i32* %12, align 4
  %200 = load i32, i32* %15, align 4
  %201 = call i32 @__msa_ceqi_h(i32 %200, i32 0)
  store i32 %201, i32* %23, align 4
  %202 = load i32, i32* %15, align 4
  %203 = sub nsw i32 0, %202
  store i32 %203, i32* %10, align 4
  %204 = load i32, i32* %15, align 4
  %205 = load i32, i32* %10, align 4
  %206 = load i32, i32* %12, align 4
  %207 = call i64 @__msa_bmnz_v(i32 %204, i32 %205, i32 %206)
  %208 = trunc i64 %207 to i32
  store i32 %208, i32* %9, align 4
  %209 = load i32, i32* %9, align 4
  %210 = shl i32 %209, 1
  store i32 %210, i32* %9, align 4
  %211 = load i32, i32* %9, align 4
  %212 = add nsw i32 %211, 1
  store i32 %212, i32* %9, align 4
  %213 = load i32, i32* %9, align 4
  %214 = load i32, i32* %30, align 4
  %215 = load i32, i32* %29, align 4
  %216 = call i32 @UNPCK_SH_SW(i32 %213, i32 %214, i32 %215)
  %217 = load i32, i32* %11, align 4
  %218 = load i32, i32* %26, align 4
  %219 = load i32, i32* %25, align 4
  %220 = call i32 @UNPCK_SH_SW(i32 %217, i32 %218, i32 %219)
  %221 = load i32, i32* %19, align 4
  %222 = load i32, i32* %27, align 4
  %223 = load i32, i32* %28, align 4
  %224 = call i32 @UNPCK_SH_SW(i32 %221, i32 %222, i32 %223)
  %225 = load i32, i32* %29, align 4
  %226 = load i32, i32* %25, align 4
  %227 = mul nsw i32 %225, %226
  store i32 %227, i32* %24, align 4
  %228 = load i32, i32* %28, align 4
  %229 = load i32, i32* %24, align 4
  %230 = mul nsw i32 %229, %228
  store i32 %230, i32* %24, align 4
  %231 = load i32, i32* %24, align 4
  %232 = ashr i32 %231, 4
  store i32 %232, i32* %29, align 4
  %233 = load i32, i32* %30, align 4
  %234 = load i32, i32* %26, align 4
  %235 = mul nsw i32 %233, %234
  store i32 %235, i32* %24, align 4
  %236 = load i32, i32* %27, align 4
  %237 = load i32, i32* %24, align 4
  %238 = mul nsw i32 %237, %236
  store i32 %238, i32* %24, align 4
  %239 = load i32, i32* %24, align 4
  %240 = ashr i32 %239, 4
  store i32 %240, i32* %30, align 4
  %241 = load i32, i32* %29, align 4
  %242 = load i32, i32* %30, align 4
  %243 = call i32 @__msa_pckev_h(i32 %241, i32 %242)
  store i32 %243, i32* %22, align 4
  %244 = load i32, i32* %22, align 4
  %245 = sub nsw i32 0, %244
  store i32 %245, i32* %10, align 4
  %246 = load i32, i32* %22, align 4
  %247 = load i32, i32* %10, align 4
  %248 = load i32, i32* %12, align 4
  %249 = call i64 @__msa_bmnz_v(i32 %246, i32 %247, i32 %248)
  %250 = trunc i64 %249 to i32
  store i32 %250, i32* %21, align 4
  %251 = load i32, i32* %21, align 4
  %252 = load i32, i32* %15, align 4
  %253 = load i32, i32* %23, align 4
  %254 = call i64 @__msa_bmnz_v(i32 %251, i32 %252, i32 %253)
  %255 = trunc i64 %254 to i32
  store i32 %255, i32* %21, align 4
  %256 = load i32, i32* %21, align 4
  %257 = load i32*, i32** %4, align 8
  %258 = call i32 @ST_SH(i32 %256, i32* %257)
  %259 = load i32*, i32** %4, align 8
  %260 = getelementptr inbounds i32, i32* %259, i64 8
  store i32* %260, i32** %4, align 8
  %261 = load i32*, i32** %6, align 8
  %262 = getelementptr inbounds i32, i32* %261, i64 8
  store i32* %262, i32** %6, align 8
  %263 = load i32, i32* %21, align 4
  %264 = load i32, i32* %21, align 4
  %265 = call i32 @__msa_hadd_s_w(i32 %263, i32 %264)
  store i32 %265, i32* %31, align 4
  %266 = load i32, i32* %31, align 4
  %267 = call i64 @HADD_SW_S32(i32 %266)
  %268 = load i32, i32* %8, align 4
  %269 = sext i32 %268 to i64
  %270 = add nsw i64 %269, %267
  %271 = trunc i64 %270 to i32
  store i32 %271, i32* %8, align 4
  %272 = load i32, i32* %16, align 4
  %273 = call i32 @__msa_clti_s_h(i32 %272, i32 0)
  store i32 %273, i32* %12, align 4
  %274 = load i32, i32* %16, align 4
  %275 = call i32 @__msa_ceqi_h(i32 %274, i32 0)
  store i32 %275, i32* %23, align 4
  %276 = load i32, i32* %16, align 4
  %277 = sub nsw i32 0, %276
  store i32 %277, i32* %10, align 4
  %278 = load i32, i32* %16, align 4
  %279 = load i32, i32* %10, align 4
  %280 = load i32, i32* %12, align 4
  %281 = call i64 @__msa_bmnz_v(i32 %278, i32 %279, i32 %280)
  %282 = trunc i64 %281 to i32
  store i32 %282, i32* %9, align 4
  %283 = load i32, i32* %9, align 4
  %284 = shl i32 %283, 1
  store i32 %284, i32* %9, align 4
  %285 = load i32, i32* %9, align 4
  %286 = add nsw i32 %285, 1
  store i32 %286, i32* %9, align 4
  %287 = load i32, i32* %9, align 4
  %288 = load i32, i32* %30, align 4
  %289 = load i32, i32* %29, align 4
  %290 = call i32 @UNPCK_SH_SW(i32 %287, i32 %288, i32 %289)
  %291 = load i32, i32* %11, align 4
  %292 = load i32, i32* %26, align 4
  %293 = load i32, i32* %25, align 4
  %294 = call i32 @UNPCK_SH_SW(i32 %291, i32 %292, i32 %293)
  %295 = load i32, i32* %20, align 4
  %296 = load i32, i32* %27, align 4
  %297 = load i32, i32* %28, align 4
  %298 = call i32 @UNPCK_SH_SW(i32 %295, i32 %296, i32 %297)
  %299 = load i32, i32* %29, align 4
  %300 = load i32, i32* %25, align 4
  %301 = mul nsw i32 %299, %300
  store i32 %301, i32* %24, align 4
  %302 = load i32, i32* %28, align 4
  %303 = load i32, i32* %24, align 4
  %304 = mul nsw i32 %303, %302
  store i32 %304, i32* %24, align 4
  %305 = load i32, i32* %24, align 4
  %306 = ashr i32 %305, 4
  store i32 %306, i32* %29, align 4
  %307 = load i32, i32* %30, align 4
  %308 = load i32, i32* %26, align 4
  %309 = mul nsw i32 %307, %308
  store i32 %309, i32* %24, align 4
  %310 = load i32, i32* %27, align 4
  %311 = load i32, i32* %24, align 4
  %312 = mul nsw i32 %311, %310
  store i32 %312, i32* %24, align 4
  %313 = load i32, i32* %24, align 4
  %314 = ashr i32 %313, 4
  store i32 %314, i32* %30, align 4
  %315 = load i32, i32* %29, align 4
  %316 = load i32, i32* %30, align 4
  %317 = call i32 @__msa_pckev_h(i32 %315, i32 %316)
  store i32 %317, i32* %22, align 4
  %318 = load i32, i32* %22, align 4
  %319 = sub nsw i32 0, %318
  store i32 %319, i32* %10, align 4
  %320 = load i32, i32* %22, align 4
  %321 = load i32, i32* %10, align 4
  %322 = load i32, i32* %12, align 4
  %323 = call i64 @__msa_bmnz_v(i32 %320, i32 %321, i32 %322)
  %324 = trunc i64 %323 to i32
  store i32 %324, i32* %21, align 4
  %325 = load i32, i32* %21, align 4
  %326 = load i32, i32* %16, align 4
  %327 = load i32, i32* %23, align 4
  %328 = call i64 @__msa_bmnz_v(i32 %325, i32 %326, i32 %327)
  %329 = trunc i64 %328 to i32
  store i32 %329, i32* %21, align 4
  %330 = load i32, i32* %21, align 4
  %331 = load i32*, i32** %4, align 8
  %332 = call i32 @ST_SH(i32 %330, i32* %331)
  %333 = load i32*, i32** %4, align 8
  %334 = getelementptr inbounds i32, i32* %333, i64 8
  store i32* %334, i32** %4, align 8
  %335 = load i32*, i32** %6, align 8
  %336 = getelementptr inbounds i32, i32* %335, i64 8
  store i32* %336, i32** %6, align 8
  %337 = load i32, i32* %21, align 4
  %338 = load i32, i32* %21, align 4
  %339 = call i32 @__msa_hadd_s_w(i32 %337, i32 %338)
  store i32 %339, i32* %31, align 4
  %340 = load i32, i32* %31, align 4
  %341 = call i64 @HADD_SW_S32(i32 %340)
  %342 = load i32, i32* %8, align 4
  %343 = sext i32 %342 to i64
  %344 = add nsw i64 %343, %341
  %345 = trunc i64 %344 to i32
  store i32 %345, i32* %8, align 4
  br label %346

346:                                              ; preds = %37
  %347 = load i32, i32* %7, align 4
  %348 = add nsw i32 %347, 1
  store i32 %348, i32* %7, align 4
  br label %34

349:                                              ; preds = %34
  %350 = load i32, i32* %8, align 4
  ret i32 %350
}

declare dso_local i32 @__msa_fill_h(i32) #1

declare dso_local i32 @LD_SH4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_clti_s_h(i32, i32) #1

declare dso_local i32 @__msa_ceqi_h(i32, i32) #1

declare dso_local i64 @__msa_bmnz_v(i32, i32, i32) #1

declare dso_local i32 @UNPCK_SH_SW(i32, i32, i32) #1

declare dso_local i32 @__msa_pckev_h(i32, i32) #1

declare dso_local i32 @ST_SH(i32, i32*) #1

declare dso_local i32 @__msa_hadd_s_w(i32, i32) #1

declare dso_local i64 @HADD_SW_S32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
